# ecma_project

./: .gitignore  CMakeLists.txt  README.md
scripts/: benchmark.py
src/: Dualization.cpp  Dualization.h  Instance.cpp  Instance.h  branch_cut.cpp  branch_cut.h  cutting_plane.cpp  cutting_plane.h  heuristic.cpp  heuristic.h  main.cpp
